phone、amount verify

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
+    "expose-loader": "^4.0.0",
     "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
     "vue": "^2.7.10",
